# Agentic-browser

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  deep-research-report.md  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md  agent-native-loop.md  architecture.md  m1-foundation.md  m10-polish.md  m2-semantic-dom.md  m3-diffs-events.md  m4-vision-ocr.md  m5-network.md  m6-accessibility.md  m7-memory-planner.md  m8-antibot.md  m9-multiagent.md  mcp.md  milestones.md  security.md
examples/: agent_loop_demo.py  agent_scrape.py  basic_open.py  benchmark_hard_site.py  compare_rockstar_vi.py  compare_scrape_methods.py  events_diff.py  mcp_config_cursor.json  network_api.py  openai_tool_agent.py  semantic_find.py  vision_ocr.py
src/agent_browser/: __init__.py  browser.py  cli.py  config.py  exceptions.py  page.py  scrape.py
src/agent_browser/accessibility/: __init__.py  engine.py  queries.py
src/agent_browser/agent/: __init__.py  challenge.py  grounding.py  outcome.py  overlays.py  recovery.py  session.py  settle.py  tools.py  wait.py
src/agent_browser/antibot/: __init__.py  humanize.py
src/agent_browser/events/: __init__.py  bus.py  diffing.py  monitor.py
src/agent_browser/mcp/: __init__.py  __main__.py  server.py  session_manager.py
src/agent_browser/memory/: __init__.py  store.py
src/agent_browser/models/: __init__.py  diff.py  element.py  events.py  network.py  observation.py  snapshot.py  vision.py
src/agent_browser/multiagent/: __init__.py  session.py
src/agent_browser/network/: __init__.py  graphql.py  monitor.py
src/agent_browser/observation/: __init__.py  compact.py
src/agent_browser/planning/: __init__.py  context.py  planner.py
src/agent_browser/semantic/: __init__.py  engine.py  extract.py  ids.py
src/agent_browser/vision/: __init__.py  detect.py  engine.py  ocr.py
tests/: test_accessibility_m6.py  test_agent_native.py  test_agent_systems.py  test_browser_page.py  test_cli.py  test_config.py  test_diff_engine.py  test_event_bus.py  test_events_page.py  test_grounding_outcome.py  test_humanize_m8.py  test_mcp_manager.py  test_memory_planner_m7.py  test_models.py  test_multiagent_m9.py  test_network_m5.py  test_semantic_engine.py  test_semantic_page.py  test_stable_ids.py  test_vision_ocr.py
tests/fixtures/: sample.html
(+2 files in other folders)
